layout issue fixing plus , development first section done

--- a/style.css
+++ b/style.css
@@ -11,9 +11,9 @@
 }
 
 .main-div{
-    max-width: 100%;
+    max-width: 1400px;
     margin: 0  auto;
-    padding: 0 150px;
+    padding: 10px 0px;
 }
 
 .sec-div{
@@ -52,7 +52,7 @@
 }
 
 .btn-main{
-    padding: 10px 15px;
+    padding: 17px 24px;
     border-radius: 8px;
     border: 1px solid black;
   }
@@ -75,7 +75,7 @@
    text-align: center;
    background-image: url(assets/Hero-bg.png);
    background-size: cover;
-   padding: 25px 0;
+   padding: 35px 0;
 }
 
 
@@ -86,9 +86,9 @@
 
 .hero-section h1{
     color: #0D1321;
-    font-size: 35px;
+    font-size: 68px;
     font-weight: 800;
-    line-height: 50px;
+    line-height: 68px;
     word-wrap: break-word;
 
 }
@@ -104,7 +104,7 @@
 
 
 .btn-hero{
-    padding: 15px 20px;
+    padding: 21px 24px;
     border-radius: 8px;
     background-color:#0D1321 ;
     border: none;
@@ -114,7 +114,7 @@
 .btn-hero a{
     color: #fff;
     text-decoration: none;
-    font-size:15px ;
+    font-size:20px ;
    
 }
 
@@ -135,17 +135,18 @@
 }
 .dev-spec h1{
 
-    font-size:30px ;
+    font-size:32px ;
     color: #0D1321;
     font-weight: 800;
     text-align: center;
     padding-top: 50px;
+
 }
 
 .dev-spec p{
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 400;
-    line-height: 20px;
+    line-height: 26px;
     padding-top: 20px;
     text-align: center;
     
@@ -178,12 +179,13 @@ text-decoration: none;
 
 .dev-process h1{
 
-    font-size: 24px;
+    font-size: 26px;
     font-weight: 700;
-    line-height: 20px;
+    line-height: 36px;
     color: rgba(13, 19, 33, 0.70);
     text-align: left;
     padding-top: 0px;
+    word-wrap: break-word;
     
 
 }
@@ -193,14 +195,14 @@ text-decoration: none;
  color: #555964;
  font-size: 16px;
  font-weight: 400;
- line-height: 20px;
+ line-height: 26px;
  text-align: left;
  padding-bottom: 15px;
 }
 
 
 .pro-one{
-    margin-right: 10%;
+    margin-right: 30%;
     text-align: left;
     justify-items: auto;
 }
@@ -211,7 +213,10 @@ text-decoration: none;
 
 .pro-box{
     display: flex;
+    margin: 48px auto;
+    background: linear-gradient(90deg, white 0%, rgba(255, 255, 255, 0) 100%);
     padding: 50px;
-    margin: 0 auto;
+    
+    
 }
 
